--- a/3 Ejercicio HTML Componentes Básicos/index.html
+++ b/3 Ejercicio HTML Componentes Básicos/index.html
@@ -1,5 +1,28 @@
+<html>
+  <head>
+    <title>My Birthday</title>
+  </head>
+  <body>
+    <h1>It's My Birthday!<h1>
+        <img
+            src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
+            alt="Example Image"
+            width="500"
+            height="300"/>
+    <h2>What to bring:</h2>
+    <ul>
+        <li>Baloons (I love baloons)</li>
+        <li>Cake (I'm really good at eating)</li>
+        <li>An appetite (There will be lots of food)</li>
+    </ul>
+    <h2>This is where you need to go:</h2>
+    <a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656" target="_blank">Google map link</a>
+  </body>
+</html>
+
+
 <!-- Example image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg
+<!--https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg-->
 
 <!-- Example Google Maps Link -->
-https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656
+<!--https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656
