--- a/3 Ejercicio HTML Componentes Básicos/index.html
+++ b/3 Ejercicio HTML Componentes Básicos/index.html
@@ -6,7 +6,7 @@
     <h1>It's My Birthday!<h1>
         <img
             src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
-            alt="Example Image"
+            alt="Example cake"
             width="500"
             height="300"/>
     <h2>What to bring:</h2>
@@ -25,4 +25,4 @@
 <!--https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg-->
 
 <!-- Example Google Maps Link -->
-<!--https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656
+<!--https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656-->
