--- a/4 Ejercicio File Paths/Folder0/index.html
+++ b/4 Ejercicio File Paths/Folder0/index.html
@@ -1,10 +1,26 @@
 <h1>All the Animals</h1>
 <h2>Rabbit:</h2>
-
+<img
+  src="./rabbit.png"
+  alt="Example rabbit"
+/>
 <h2>Cat:</h2>
-
+<img
+  src="./Folder3/cat.png"
+  alt="Example cat"
+/>
 <h2>Dog:</h2>
-
+<img
+  src="../dog.png"
+  alt="Example dog"
+/>
 <h2>Fish:</h2>
-
+<img
+  src="../Folder1/fish.png"
+  alt="Example fish"
+/>
 <h2>Bird:</h2>
+<img
+  src="../Folder1/Folder2/bird.png"
+  alt="Example"
+/>
