--- a/5 Ejercicio HTML Boiler Plate Portafolio/index.html
+++ b/5 Ejercicio HTML Boiler Plate Portafolio/index.html
@@ -1,15 +1,40 @@
-<!-- TODO 1: Crear la estructura básica de HTML -->
-
-<!-- TODO 2: Añadir el HTML de tus proyectos anteriores en la carpeta public -->
-
-<!-- TODO 3: Tomar capturas de pantalla de las vistas previas de tus proyectos y añadir las imágenes a la carpeta images -->
-
-<!-- TODO 4: Añadir títulos/subtítulos, etc. -->
-
-<!-- TODO 5: Añadir un enlace a las páginas de los proyectos -->
-
-<!-- TODO 6: Añadir imágenes para mostrar las vistas previas de los proyectos
-PISTA para TODO 6: Puedes usar el atributo height configurado a 200 para hacer la imagen más pequeña:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Añadir los enlaces a las páginas de Contacto y Sobre Mí -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My portfolio</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <h1>Portfolio Jeremy Marin</h1>
+    <h2>I'm a Web Developer</h2>
+    <hr />
+    <h1>
+      <a href="./public/Movie-ranking.html">Movie clasification project</a>
+    </h1>
+    <img src="./assets/images/movie-ranking.png" alt="Movies Ranking" />
+    <h1>
+      <a href="./public/Birthday-invite.html">Birthday invitation project</a>
+    </h1>
+    <img
+      src="./assets/images/birthday-invite.png"
+      alt="Birthday cake invitation"
+    />
+    <hr />
+    <h2>
+      <a href="./public/about.html">About me</a> |
+      <a href="./public/contact.html">Contact</a>
+    </h2>
+  </body>
+</html>
