--- a/5 Ejercicio HTML Boiler Plate Portafolio/public/contact.html
+++ b/5 Ejercicio HTML Boiler Plate Portafolio/public/contact.html
@@ -1,6 +1,6 @@
 <h1>Contacto</h1>
 <p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Email: jmarin@puce.edu.ec</p>
 <p>Address:</p>
 <p>
   12 de octubre<br />
