--- a/5 Ejercicio HTML Boiler Plate Portafolio/public/movie-ranking.html
+++ b/5 Ejercicio HTML Boiler Plate Portafolio/public/movie-ranking.html
@@ -1,9 +1,16 @@
-<h1>Las Mejores Películas Según Andres</h1>
-<h2>Mis 3 películas favoritas de todos los tiempos.</h2>
-<hr />
-<h3>El Silencio de los Inocentes</h3>
-<p>Un thriller psicológico que te mantiene al borde del asiento.</p>
-<h3>Seven</h3>
-<p>Un oscuro y fascinante thriller sobre la búsqueda de un asesino en serie.</p>
-<h3>El Club de la Pelea</h3>
-<p>Un thriller psicológico con giros inesperados y una narrativa única.</p>
+<html>
+  <head>
+    <title>Best Movies</title>
+  </head>
+  <body>
+    <h1>The Best Movies According to me</h1>
+    <h2>My top 3 movies of all time</h2>
+    <hr />
+    <h3>Perfect Blue</h3>
+    <p>This is my favorite anime movie</p>
+    <h3>Interestelar</h3>
+    <p>My favorite sci-fi movie</p>
+    <h3>Knives Out</h3>
+    <p>Its a great movie with a lot of mistery</p>
+  </body>
+</html>
