--- a/6 Ejercicio CSS/inline.html
+++ b/6 Ejercicio CSS/inline.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="es"></html>
-
-<head>
-  <meta charset="UTF-8">
-  <title>Inline</title>
-</head>
-
-<body>
-<h1>¡Estílame en azul!</h1>
-</body>
-
+  <head>
+    <meta charset="UTF-8">
+    <title>Inline</title>
+  </head>
+  <body style="background:aquamarine">
+  <h1 style="color:blue">¡Estílame en azul!</h1>
+  </body>
 </html>
