--- a/6 Ejercicio CSS/external.html
+++ b/6 Ejercicio CSS/external.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es"></html>
-<head>
-  <meta charset="UTF-8">
-  <title>External</title>
-</head>
-<body>
-  <h1>Estílame en verde</h1>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>External</title>
+    <link href="./style.css" rel="stylesheet">
+  </head>
+  <body>
+    <h1>Estílame en verde</h1>
+  </body>
 </html>
