--- a/6 Ejercicio CSS/index.html
+++ b/6 Ejercicio CSS/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="es"></html>
-
-<head>
-  <meta charset="UTF-8">
-  <title>Agregando CSS</title>
-</head>
-
-<body>
-  <h1>Tres Métodos de Agregar CSS</h1>
-  <!-- Crear 3 Enlaces a Las 3 Páginas Web: en línea, interna y externa -->
-</body>
-
+<html lang="en"></html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Agregando CSS</title>
+  </head>
+  <body style="background-color:aquamarine">
+    <h1>Tres Métodos de Agregar CSS</h1>
+    <h1><a href="./internal.html">Internal</a> | <a href="./external.html">External</a> | <a href="./inline.html">Inline</a></h1>
+  </body>
 </html>
