--- a/6 Ejercicio CSS/internal.html
+++ b/6 Ejercicio CSS/internal.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="es"></html>
-
-<head>
-  <meta charset="UTF-8">
-  <title>Internal</title>
-</head>
-
-<body>
-<h1>¡Estílame en rojo!</h1>
-</body>
-
+  <head>
+    <meta charset="UTF-8">
+    <title>Internal</title>
+    <style>
+      body {color: red;
+        background-color: aquamarine;}
+    </style>
+  </head>
+  <body>
+  <h1>¡Estílame en rojo!</h1>
+  </body>
 </html>
