--- a/13 Ejercicio CSS Grid Placement/exercise3.html
+++ b/13 Ejercicio CSS Grid Placement/exercise3.html
@@ -43,6 +43,8 @@
 
     .book {
       background-color: #E58331;
+      grid-row-start: span 1;
+      grid-row-start: span 3;
       /* TODO: Make the book div look like 
       the goal3 image using grid-row. */
     }
